# example-rust-dapr-otel

./: .dockerignore  .env.example  .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  renovate.json
.github/workflows/: docker-build-push.yml
docs/: RENOVATE_SETUP.md  architecture.md  argocd-application.yaml  dapr-component.yaml  deployment.md  kubernetes-deployment.yaml
src/: config.rs  main.rs  telemetry.rs
src/server/: memstore.rs  mod.rs
